tests/paczka1/fuzzy1/64134827.err
Error in line 1: w4o7ghLfGT S610 8,2
Error in line 6: w4o7ghLfGT S605 25,2
Error in line 20: LZC1v S610 -1,3
Error in line 19: LZC1v S610 35,7
Error in line 15: yuYl S605 5,0
Error in line 22: LZC1v S605 72,1
Error in line 34: LZC1v A594 14,7
